Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.13.0-beta1
-
None
Description
In Projects -> Run Settings -> Environment: if set variable to custom long value - layout will stretch horizontally to show full un-cropped value:
Use Build Environment and
Set Path to <very long value>
Before:
After:
Attachments
Issue Links
- duplicates
-
QTCREATORBUG-24192 DetailsWidget (EnvironmentWidget): Summary label expands too much
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-24136 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
304456,3 | DetailsWidget: Don't allow the summary label to expand too much | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |