DetailsWidget: Don't allow the summary label to expand too much

The summary label must not be able to make the DetailsWidget grow
horizontally.

Task-number: QTCREATORBUG-24136
Change-Id: If71b007c02ad1bbcdd4f2e3bf083dfce24a14787
Reviewed-by: Eike Ziller <eike.ziller@qt.io>